   * problem with duplicate translations being saved with each upload has been
     fixed.
   * I added a check for a name of "." to the list of invalid campaign names.
     We should think about a list of valid characters rather than invalid ones.
     Something like ^[A-Za-z0-9_]+$ instead of trying to list potentially bad
     names.
 * utils: added weblist.pl and webtgz.pl web interface programs
   * updated weblist.pl to display translation information
   * updated weblist.pl and webtgz.pl to use standard wesnoth logo banner
   * updated webtgz.pl to request campaign info only for the campaign of interest
   * updated weblist.pl to display sizes in KB.
   * because the heuristic for determining translations will sometimes give
     duplicates, I changed the web page to remove duplicate languages
   * I fixed a bug in how the language list was sorted on the web page
   * Updated webtgz.pl to do a couple of undefines before starting the copy of
     the cached campaign, to give perl a chance to release some memory.
 * fix untranslated unit create dialog (#4424)
 * random map generator now uses island_size (#4458)
 * various bug fixes and code cleanups

Version 1.0rc1:
 * language and i18n:
   * updated translations: Afrikaans, Bulgarian, Catalan, Finnish, German,
     Greek, Hungarian, Japanese, Portuguese (Brazil), Russian, Slovenian,
     Spanish, Turkish
   * new manual: Hungarian, updated manual: English, Swedish
   * updated man pages: English, German, Swedish 
 * campaigns:
   * The Dark Hordes
     * Crelanu's Book no longer ends if enemy leaders are killed
     * Underground Pool no longer ends if enemy leaders are killed
     * Underground Pool can now only be won with Gwiti or Tanar (#14495)
   * Son of the Black Eye
     * Watch Towers can no longer be recalled in Clash of Armies
     * Saving Inarix no longer ends if enemy leaders are killed
     * tweaked Black Flag and Desert of Death maps