@@ -87,20 +87,6 @@ void find_translations(const config& cfg, config& campaign)
         }
 }
 
-bool check_names_legal(const config& dir)
-{
-        const config::child_list& files = dir.get_children("file");
-        for(config::child_list::const_iterator i = files.begin(); i != files.end(); ++i) {
-		if (!campaign_name_legal((**i)["name"])) return false;
-        }
-        const config::child_list& dirs = dir.get_children("dir");
-        for(config::child_list::const_iterator i = dirs.begin(); i != dirs.end(); ++i) {
-		if (!campaign_name_legal((**i)["name"])) return false;
-		if (!check_names_legal(**i)) return false;
-        }
-	return true;
-}
-
 void campaign_server::run()
 {
 	for(int increment = 0; ; ++increment) {
